<resources>
    <string name="app_name" translatable="false">IQBell</string>
    <string name="bt_not_supported">Bluetooth isn\'t supported on your device!</string>
    <string name="bt_is_off">Bluetooth is off! Turn it on to continue</string>
    <string name="turn_on">Turn bluetooth on</string>
    <string name="error_bt_enabling">An error occurred while turning Bluetooth on</string>
    <string name="not_paired">IQBell is unpaired. Pair, then try again</string>
    <string name="connected">IQBell is connected</string>
    <string name="disconnected">IQBell is disconnected. Press the button on the case and hold it for 3 seconds</string>
    <string name="connecting">Connecting…</string>
    <string name="authorization_failed">Incorrect password</string>
    <string name="channel_name">IQBell State</string>
    <string name="channel_description">Shows whether IQBell is connected</string>
    <string name="preparing">Preparing to connect</string>
    <string name="get_time">Get time</string>
    <string name="unknown">Unknown</string>
    <string name="iq_status">Connection Status:</string>
    <string name="home">Home</string>
    <string name="battery">Battery</string>
    <string name="time">Time</string>
    <string name="timetable">Timetable</string>
    <string name="holidays">Holidays</string>
    <string name="about">About</string>
    <string name="manual_bells_control">Manual Bells Control</string>
    <string name="manual_bells_control_na">Manual Bells Control Not Available</string>
    <string name="iqbell_time_date">IQBell\'s time and date</string>
    <string name="new_time_date">New time and date</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="isnt_set">Isn\'t set</string>
    <string name="set_android_td">Set Android\'s time and date</string>
    <string name="send">Send</string>
    <string name="data_was_sent">Data was sent successfully</string>
    <string name="error_sending">Sending data wasn\'t successful</string>
    <string name="timetables_main_tab">Main</string>
    <string name="sending_data">Sending data</string>
    <string name="error">Error</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="error_updating_extra">Error updating data</string>
    <string name="data_updated">The data was successfully updated</string>
    <string name="timetables_second_tab">Second</string>
    <string name="holidays_short_tab">Short holidays</string>
    <string name="holidays_long_tab">Long holidays</string>
    <string name="short_day">Short classes</string>
    <string name="holiday_day">Holiday</string>
    <string name="choose_short_or_holiday">Short classes or holiday?</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="set_start_date">Set start of the holidays</string>
    <string name="set_end_date">Set end of the holidays</string>
    <string name="battery_state">Battery state:</string>
    <string name="charging">Charging</string>
    <string name="not_charging">Not charging</string>
    <string name="charged">Charged</string>
    <string name="brightness">Display brightness</string>
    <string name="workshop">Workshop</string>
    <string name="assembly">Assembly</string>
    <string name="average_ringing">Average ringing</string>
    <string name="classes">Classes</string>
    <string name="non_school_day">Non-school day</string>
    <string name="not_started">Classes haven\'t started</string>
    <string name="finished">Classes have finished</string>
    <string name="not_ringing">Not ringing</string>
    <string name="lesson_ringing">Average ringing</string>
    <string name="workshop_ringing">Workshop ringing</string>
    <string name="assembly_ringing">Assembly ringing</string>
    <string name="normal_classes">Normal classes</string>
    <string name="next_bell">Next bell</string>
    <string name="time_till_next_bell">Time till it</string>
    <string name="developer">Developer: Danila Gornushko</string>
    <string name="purpose">An application for controlling IQBell Device</string>
    <string name="thanks">Thanks to:</string>
    <string name="names" translatable="false">Антон Науменко, Светлана Науменко, Miha-x64, Алексей Шефлер, Сергей Дынников, Расита Губачикова, Мухаммед Товкуев</string>
    <string name="license">License: GNU General Public License, version 3 (GPLv3)</string>
</resources>
